--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,9 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { Image } from 'astro:assets';
+import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
+
 import '../styles/tailwind.css';
 import 'animate.css';
 const { title } = Astro.props;
@@ -19,11 +22,11 @@ const { title } = Astro.props;
 			<Header></Header>
 		</header>
 		
-		<main class="p-sm"> 
+		<main class=""> 
 			<slot />
 		</main>
 
-		<footer class="bg-blue-500">
+		<footer class="">
 			<Footer></Footer>
 		</footer>
 			
