--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,188 +3,150 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
-import thumbsup from "../assets/images/thumbsup.png";
+import { useRef } from 'react';
+import gsap from 'gsap';
+import { useGSAP } from '@gsap/react';
+import filler from "../assets/images/filler.png";
+import herotext from "../assets/images/herotext.svg";
+import herotext2 from "../assets/images/herotext2.svg";
+import Anmeldelser from "../components/Anmeldelser.astro";
 ---
 <MainLayout title="Titel">
-	<article class="max-w-screen-xl mx-auto">
-		<div class="prose">
-		<h1 class="text-xlarge">Design system!</h1>
-		<p>Tailwind konfigureret til at følge Birgittes <a href="
-https://www.figma.com/design/GK1F375GejhwIkOHADf6Rn/Dansestudiet_html_to_css-%2B-designsystem?node-id=6806-2&t=9pE0OOaxiPeTTIVG-1">design system</a></p>
+	<article class="mx-auto">
+																	 <!-- Hero section  -->
+
+<div class="min-h-screen bg-white flex flex-col items-center justify-center">
+  <!-- Main Content Grid -->
+  <section class="grid grid-cols-1 md:grid-cols-12 gap-4 px-4 md:px-16 md:py-8 md:grid-rows-[min-content_1fr_min-content] overflow-hidden">
+	<!-- Brand navn -->
+	<div class="md:col-span-6">
+        <img class="" src={herotext.src} alt="">
+</div>
+    <!-- Image 1 -->
+    <div class="md:col-span-6 md:row-span-2 md:row-start-2">
+        <img class="md:object-cover md:w-full md:h-full" src={filler.src} alt="">
+    </div>
+
+    <!-- Image 2 -->
+    <div class="md:col-span-6 md:row-span-2 md:col-start-7">
+        <img class="md:object-cover md:w-full md:h-full" src={filler.src} alt="">
+    </div>
+
+    <!-- Text og Logo Section -->
+    <div class="md:col-span-6">
+		<div class="flex justify-between items-center content-center place-content-center	">
+      <h2 class="text-red-600 text-xl sm:text-3xl lg:text-5xl">VIN PÅ ABONNEMENT</h2>
+        <img src={filler.src} alt="Logo" class="w-24 h-24">
 		</div>
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Typografi</h2>
-			<h3 class="text-small font-semibold mt-sm">Størrelse</h3>
-				<div class="flex flex-col  [&>p]:place-content-center gap-xxs max-w-9xl">
-					<p>Brødtekst</p>
-					<p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae rerum, minima molestias doloribus excepturi ab reprehenderit placeat dignissimos quia ratione deserunt unde, similique, vitae fuga nulla veniam architecto quaerat. Maiores.</p>
-					<p>Konsultativ tekst</p>
-					<p class="text-konsultativ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae rerum, minima molestias doloribus excepturi ab reprehenderit placeat dignissimos quia ratione deserunt unde, similique, vitae fuga nulla veniam architecto quaerat. Maiores.</p>
-					<p class="text-small">Small</p>
-					<p class="text-medium">Medium</p>
-					<p class="text-large">Large</p>
-					<p class="text-xlarge">Xlarge</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Vægt</h3>
-				<div class="flex flex-col  [&>p]:place-content-center gap-xxs">
-					<p class="font-light">Light</p>
-					<p class="font-regular">Regular</p>
-					<p class="font-semibold">Semibold</p>
-				</div>
-		</section>
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Farver</h2>
-			<h3 class="text-small font-semibold mt-sm">Red</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-red-50">50</p>
-					<p class="w-lg h-lg bg-red-100">100</p>
-					<p class="w-lg h-lg bg-red-200">200</p>
-					<p class="w-lg h-lg bg-red-300">300</p>
-					<p class="w-lg h-lg bg-red-400">400</p>
-					<p class="w-lg h-lg bg-red-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-red-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-red-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-red-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-red-900 text-white">900</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Blue</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-blue-50">50</p>
-					<p class="w-lg h-lg bg-blue-100">100</p>
-					<p class="w-lg h-lg bg-blue-200">200</p>
-					<p class="w-lg h-lg bg-blue-300">300</p>
-					<p class="w-lg h-lg bg-blue-400">400</p>
-					<p class="w-lg h-lg bg-blue-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-blue-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-blue-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-blue-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-blue-900 text-white">900</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Yellow</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-yellow-50">50</p>
-					<p class="w-lg h-lg bg-yellow-100">100</p>
-					<p class="w-lg h-lg bg-yellow-200">200</p>
-					<p class="w-lg h-lg bg-yellow-300">300</p>
-					<p class="w-lg h-lg bg-yellow-400">400</p>
-					<p class="w-lg h-lg bg-yellow-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-yellow-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-yellow-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-yellow-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-yellow-900 text-white">900</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Neutral</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-neutral-50">50</p>
-					<p class="w-lg h-lg bg-neutral-100">100</p>
-					<p class="w-lg h-lg bg-neutral-200">200</p>
-					<p class="w-lg h-lg bg-neutral-300">300</p>
-					<p class="w-lg h-lg bg-neutral-400">400</p>
-					<p class="w-lg h-lg bg-neutral-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-neutral-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-neutral-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-neutral-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-neutral-900 text-white">900</p>
-				</div>	
-		</section>
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Spacing</h2>
-			<h3 class="text-small font-semibold mt-sm">Spacing</h3>
-				<div class="flex flex-col [&>p]:text-center [&>p]:place-content-center gap-xxs">
-					<p class="w-xxs h-lg bg-blue-300">xxs</p>
-					<p class="w-xs h-lg bg-blue-300">xs</p>
-					<p class="w-s h-lg bg-blue-300">s</p>
-					<p class="w-sm h-lg bg-blue-300">sm</p>
-					<p class="w-m h-lg bg-blue-300">m</p>
-					<p class="w-ml h-lg bg-blue-300">ml</p>
-					<p class="w-lg h-lg bg-blue-300">lg</p>
-					<p class="w-xl h-lg bg-blue-300">xl</p>
-					<p class="w-2xl h-lg bg-blue-300">2xl</p>
-					<p class="w-3xl h-lg bg-blue-300">3xl</p>
-					<p class="w-4xl h-lg bg-blue-300">4xl</p>
-					<p class="w-5xl h-lg bg-blue-300">5xl</p>
-					<p class="w-6xl h-lg bg-blue-300">6xl</p>
-					<p class="w-7xl h-lg bg-blue-300">7xl</p>
-					<p class="w-8xl h-lg bg-blue-300">8xl</p>
-					<p class="w-9xl h-lg bg-blue-300">9xl</p>
-				</div>
-		</section>
+    </div>
+  </section>
+</div>	
 
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Borders</h2>
-			<h3 class="text-small font-semibold mt-sm">Border width</h3>
-				<div class="flex gap-xxs [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg border-0 border-blue-500">0</p>
-					<p class="w-lg h-lg border border-blue-500">default</p>
-					<p class="w-lg h-lg border-2 border-blue-500">2</p>
-					<p class="w-lg h-lg border-3 border-blue-500">3</p>
-					<p class="w-lg h-lg border-4 border-blue-500">4</p>				
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Border radius</h3>
-				<div class="flex gap-xxs [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-4xl h-4xl border-0 border-blue-500 rounded-none">None</p>
-					<p class="w-4xl h-4xl border border-blue-500 rounded-sm">Small</p>
-					<p class="w-4xl h-4xl border-2 border-blue-500 rounded">Default</p>
-					<p class="w-4xl h-4xl border-3 border-blue-500 rounded-md">Medium</p>
-					<p class="w-4xl h-4xl border-4 border-blue-500 rounded-lg">Large</p>	
-					<p class="w-4xl h-4xl border-4 border-blue-500 rounded-full">Full</p>				
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Blue</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-blue-50">50</p>
-					<p class="w-lg h-lg bg-blue-100">100</p>
-					<p class="w-lg h-lg bg-blue-200">200</p>
-					<p class="w-lg h-lg bg-blue-300">300</p>
-					<p class="w-lg h-lg bg-blue-400">400</p>
-					<p class="w-lg h-lg bg-blue-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-blue-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-blue-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-blue-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-blue-900 text-white">900</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Yellow</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-yellow-50">50</p>
-					<p class="w-lg h-lg bg-yellow-100">100</p>
-					<p class="w-lg h-lg bg-yellow-200">200</p>
-					<p class="w-lg h-lg bg-yellow-300">300</p>
-					<p class="w-lg h-lg bg-yellow-400">400</p>
-					<p class="w-lg h-lg bg-yellow-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-yellow-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-yellow-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-yellow-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-yellow-900 text-white">900</p>
-				</div>
-			<h3 class="text-small font-semibold mt-sm">Neutral</h3>
-				<div class="flex [&>p]:text-center [&>p]:place-content-center">
-					<p class="w-lg h-lg bg-neutral-50">50</p>
-					<p class="w-lg h-lg bg-neutral-100">100</p>
-					<p class="w-lg h-lg bg-neutral-200">200</p>
-					<p class="w-lg h-lg bg-neutral-300">300</p>
-					<p class="w-lg h-lg bg-neutral-400">400</p>
-					<p class="w-lg h-lg bg-neutral-500 text-neutral-50">500</p>
-					<p class="w-lg h-lg bg-neutral-600 text-neutral-50">600</p>
-					<p class="w-lg h-lg bg-neutral-700 text-neutral-50">700</p>
-					<p class="w-lg h-lg bg-neutral-800 text-neutral-50">800</p>
-					<p class="w-lg h-lg bg-neutral-900 text-white">900</p>
-				</div>	
-		</section>
 
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Shadows</h2>
-			<h3 class="text-small font-semibold mt-sm">Border width</h3>
-			<div class="flex gap-xxs [&>p]:text-center [&>p]:place-content-center">
-				<p class="w-32 h-lg border border-blue-500 shadow-drop25">Drop 25</p>
-				<p class="w-32 h-lg border border-blue-500 shadow-drop50">Drop 50</p>
-				<p class="w-32 h-lg border border-blue-500 shadow-inner25">Inner 25</p>
-				<p class="w-32 h-lg border border-blue-500 shadow-inner50">Inner 50</p>		
-			</div>
-		</section>
+  															<!-- Abonnenter section -->
 
-		<section>
-			<h2 class="text-large font-semibold mt-lg">Card</h2>
-			<h3 class="text-small font-semibold mt-sm">Kommer snart;-)</h3>
-		</section>
+<section class="bg-red-700 text-white py-16 px-4">
+  <!-- Heading -->
+  <div class="mx-auto">
+    <h2 class="text-4xl pb-8">
+Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h2>
+  </div>
 
-	</article>
+  <!-- Abonnenter -->
+  <div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-4">
+    <div class="">
+	<img class="md:object-cover md:w-full md:h-full" src={filler.src} alt="">
+      <p class="">Rødvinskasse</p>
+    </div>
+    <div class="">
+			<img class="md:object-cover md:w-full md:h-full" src={filler.src} alt="">
+      <p class="">Hvidvinskasse</p>
+    </div>
+    <div class="">
+			<img class="md:object-cover md:w-full md:h-full" src={filler.src} alt="">
+
+      <p class="">Mixed kasse</p>
+    </div>
+  </div>
+</section>
+
+  																<!-- Vinklub section -->
+
+<section class="py-16 px-4 md:px-16">
+  <div class="mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8">
+    <!-- Venstre Content -->
+    <div class="space-y-6">
+      <h2 class="text-lg font-medium tracking-wide">
+        Vin på abonnement
+      </h2>
+      <h2 class="text-4xl md:text-5xl uppercase font-bold leading-tight">
+        Oplev vores vinklub
+      </h2>
+      <p class="text-lg md:text-xl leading-relaxed">
+        Når du bliver abonnent hos os, bliver du samtidig en del af vores vinklub.
+      </p>
+      <p class="text-lg md:text-xl leading-relaxed">
+        Vi mødes én gang hver måned og smager på næste måneds vin, så du får mulighed for at tilpasse din næste vinkasse til dine ønsker og behov. Derudover udveksler vi erfaringer og viden om vin og har nogle hyggelige stunder sammen.
+      </p>
+<Button>Bliv abonnent</Button>
+
+    </div>
+
+    <!-- Højre Image -->
+    <div class="flex justify-center">
+			<img class="md:object-cover :w-full h-auto" src={filler.src} alt="">
+    </div>
+  </div>
+</section>
+  																<!-- Shop section -->
+<section class="py-16 px-8">
+  <div class="mx-auto">
+    <!-- Header -->
+    <div class="flex justify-between items-center mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold text-gray-800">
+        Vinflasker
+      </h2>
+	  <Button>Bliv abonnent</Button>
+
+    
+    </div>
+  																<!-- Nyhedsbrev section -->
+												<section class="py-16 px-8 md:px-16">
+  <div class="mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8">
+    <!-- Venstre Content -->
+	   <div class="flex justify-center">
+			<img class="md:object-cover :w-full h-auto" src={filler.src} alt="">
+     </div>
+
+    <!-- Højre Content-->
+    <div class="space-y-6">
+      <p class="text-lg font-medium  tracking-wide">Tilmelding til nyhedsbrev</p>
+      <h2 class="text-4xl md:text-5xl uppercase leading-tight">FÅ 10% PÅ DIN FØRSTE ORDRE</h2>
+        <!--  Input fælt -->
+    <form class="flex flex-col md:flex-row items-center border-gray-800 overflow-hidden">
+      <input 
+        type="email" 
+        placeholder="Skriv din e-mail her..." 
+        class="flex-grow px-4 py-3 text-lg text-gray-800 placeholder-gray-500 "
+        required
+      />
+      <button 
+        type="submit" 
+        class="flex items-center justify-center px-6 py-3 border-r border-y border-black text-lg font-medium hover:bg-red-700 hover:text-white transition">
+        →
+      </button>
+    </form>
+      <p class="text-sm md:text-sm leading-relaxed">
+Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
+    </div>
+
+  </div>
+</section>			
+  																<!-- Anmeldelser section -->
+
+<Anmeldelser></Anmeldelser>
+
+
+
+</article>
 </MainLayout>
