--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,11 @@ import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
 
 ---
 <div>
-<footer class=" pt-16 border-t border-black">
+<footer class=" pt-8 border-t border-black">
   <div class="mx-auto space-y-16">
     <!-- Large Logo -->
-    <div class="">
+    <div class="px-8">
           <img class="object-cover w-full h-full" src={explorewinesfooter.src} alt="">
-
     </div>
 
     <!-- Footer Content -->
