--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -6,6 +6,7 @@ import { Image } from 'astro:assets';
 import filler from "../assets/images/filler.png";
 import stepbystep from "../assets/images/stepbystep.svg"
 import stepbystepmobile from "../assets/images/stepbystepmobile.svg"
+import Anmeldelser from "../components/Anmeldelser.astro";
 
 ---
 <MainLayout title="Titel">
@@ -93,7 +94,7 @@ Vores vinabonnementskoncept er simpelt: Bestilt din fortrukne vinkasse og få de
 															    <!--  ANMELDELSER -->
 
 
-
+<Anmeldelser></Anmeldelser>
 
 	</article>
 </MainLayout>
