--- a/src/pages/betal.astro
+++ b/src/pages/betal.astro
@@ -4,9 +4,105 @@ import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
 import thumbsup from "../assets/images/thumbsup.png";
+import betaltegning from "../assets/images/betaltegning.svg";
 ---
 <MainLayout title="Titel">
-	<article class="max-w-screen-xl mx-auto">
-<h1>explorewines</h1>
-	</article>
+	<!-- Købsflow Side -->
+<section class="text-black px-8">
+  <div class="grid grid-cols-1 md:grid-cols-6 mx-auto">
+    <!-- Venstre Illustration -->
+    <div class="hidden md:block md:col-span-2 items-center	">
+      <div class="relative h-full">
+        <!-- Illustration -->
+    <img class="md:object-cover :w-full h-auto" src={betaltegning.src} alt="kasse og vin">
+      </div>
+    </div>
+
+    <!-- Højre Indhold -->
+    <div class="md:col-span-4 border border-black md:mx-16 lg:mx-24 xl:mx-32 md:mt-12">
+
+      <!-- Titel -->
+      <h2 class="texl-xl  md:text-3xl font-bold text-red-700 mx-4 my-3">KASSE <span class=" text-xs sm:text-sm text-black float-right">Trin 1/3</span></h2>
+
+      <!-- Produktliste -->
+      <div class="border-t border-b border-black divide-y">
+        <!-- Første Produkt -->
+        <div class="flex flex-wrap items-center">
+          <img
+            src="https://via.placeholder.com/80x120"
+            alt="Rødvinskasse"
+            class="w-20 h-28 object-cover mr-4"
+          />
+          <div class="flex-1">
+            <h3 class="font-medium text-lg">Rødvinskasse (abonnement)</h3>
+          </div>
+          <div class="flex items-center space-x-2">
+            <button class="text-xl">-</button>
+            <span>1 stk</span>
+            <button class="text-xl">+</button>
+          </div>
+          <div class="ml-4 text-right">
+            <p>599,-</p>
+            <a href="#" class="text-red-700 text-sm">fjern x</a>
+          </div>
+        </div>
+		       <!-- Andet Produkt -->
+        <div class="flex flex-wrap items-center ">
+          <img
+            src="https://via.placeholder.com/80x120"
+            alt="Rødvinskasse"
+            class="w-20 h-28 object-cover mr-4"
+          />
+          <div class="flex-1">
+            <h3 class="font-medium text-lg">Rødvinskasse (abonnement)</h3>
+          </div>
+          <div class="flex items-center space-x-2">
+            <button class="text-xl">-</button>
+            <span>1 stk</span>
+            <button class="text-xl">+</button>
+          </div>
+          <div class="ml-4 text-right">
+            <p>599,-</p>
+            <a href="#" class="text-red-700 text-sm">fjern x</a>
+          </div>
+        </div>
+
+        <!-- Tredje Produkt -->
+        <div class="flex flex-wrap items-center">
+          <img
+            src="https://via.placeholder.com/80x120"
+            alt="Chardonnay"
+            class="w-20 h-28 object-cover mr-4"
+          />
+          <div class="flex-1">
+            <h3 class="font-medium text-lg">
+              2023 Chardonnay, Terre Siciliane IGP
+            </h3>
+          </div>
+          <div class="flex items-center space-x-2">
+            <button class="text-xl">-</button>
+            <span>1 stk</span>
+            <button class="text-xl">+</button>
+          </div>
+          <div class="ml-4 text-right">
+            <p>450,-</p>
+            <a href="#" class="text-red-700 text-sm">fjern x</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Total -->
+      <div class="flex justify-between items-center mt-6 text-lg font-medium">
+        <span>I alt</span>
+        <span>1049 kr.</span>
+      </div>
+
+    </div>
+	      <!-- Næste Knap -->
+      <div class="mt-4 md:col-span-2 md:col-start-4 place-self-center">
+        <a href="/betal2"><Button>Næste</Button></a>
+      </div>
+  </div>
+</section>
+
 </MainLayout>
