--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Anmeldelser from "../components/Anmeldelser.astro";
 	<article class="mx-auto">
 																	 <!-- Hero section  -->
 
-<div class="min-h-screen bg-white flex flex-col items-center justify-center">
+<div class=" flex flex-col items-center justify-center">
   <!-- Main Content Grid -->
   <section class="grid grid-cols-1 md:grid-cols-12 gap-4 px-4 md:px-16 md:py-8 md:grid-rows-[min-content_1fr_min-content] overflow-hidden">
 	<!-- Brand navn -->
